# homedevices

./: .gitignore  main.py  pyproject.toml  setup.py
homedevices/: BotDevices.py  __init__.py  __main__.py  device.py  home.py  util.py
hsh/: BotDevices.py  __main__.py  terminal.py
hui/: BotDevices.py  __init__.py  __main__.py  complete.py  home.py  main.py  util.py
