[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'hsh'
dynamic = ['version']

[tool.setuptools]
packages = ['hsh']

[project.scripts]
hsh = 'hsh.__main__:main'

[tool.setuptools.dynamic]
version = {attr = 'hsh.__version__.version'}

[tool.setuptools_scm]
write_to = 'hsh/__version__.py'
